--- a/example/Podfile
+++ b/example/Podfile
@@ -5,8 +5,7 @@ source 'git@github.com:IndoorAtlas/CocoaPods-Specs.git'
 
 target 'ios-sdk-swift-examples' do
 
-  pod 'IndoorAtlas', '2.8.4'
-  pod 'IndoorAtlasWayfinding', '2.8.0'
+  pod 'IndoorAtlas', '2.9.0-beta'
   pod 'SVProgressHUD', :git => 'https://github.com/SVProgressHUD/SVProgressHUD.git'
 
 end
