--- a/example/Podfile
+++ b/example/Podfile
@@ -1,11 +1,10 @@
 use_frameworks!
 
 source 'https://github.com/CocoaPods/Specs.git'
-source 'https://github.com/IndoorAtlas/CocoaPods-Specs.git'
 
 target 'ios-sdk-swift-examples' do
 
-  pod 'IndoorAtlas', '2.9.0-beta'
+  pod 'IndoorAtlas', '2.9.4'
   pod 'SVProgressHUD', :git => 'https://github.com/SVProgressHUD/SVProgressHUD.git'
 
 end
