--- a/example/Podfile
+++ b/example/Podfile
@@ -1,10 +1,11 @@
 use_frameworks!
 
 source 'https://github.com/CocoaPods/Specs.git'
+source 'https://github.com/IndoorAtlas/CocoaPods-Specs.git'
 
 target 'ios-sdk-swift-examples' do
 
-  pod 'IndoorAtlas', '2.9.4'
+  pod 'IndoorAtlas', '3.0.0-beta'
   pod 'SVProgressHUD', :git => 'https://github.com/SVProgressHUD/SVProgressHUD.git'
 
 end
