--- a/example/ios-sdk-swift-examples/Info.plist
+++ b/example/ios-sdk-swift-examples/Info.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Improved location accuracy</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -24,10 +22,18 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>For better indoor positioning experience.</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>For better indoor positioning experience.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Platform location requested for better indoor positioning experience.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Improved location accuracy</string>
+	<string>Platform location requested for better indoor positioning experience.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Improved location accuracy</string>
+	<string>Platform location requested for better indoor positioning experience.</string>
+	<key>NSMotionUsageDescription</key>
+	<string>For better indoor positioning experience</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 	<key>LSApplicationCategoryType</key>
